# VulkanPBRT

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AccumulationBuffer.cpp  AccumulationBuffer.hpp  BFRBlender.hpp  BMFR.hpp  CMakeLists.txt  CountTrianglesVisitor.hpp  Defines.hpp  GBuffer.cpp  GBuffer.hpp  GBufferRasterizer.cpp  GBufferRasterizer.hpp  IlluminationBuffer.cpp  IlluminationBuffer.hpp  LICENSE  PBRTPipeline.cpp  PBRTPipeline.hpp  PipelineStructs.hpp  README.md  RayTracingVisitor.cpp  RayTracingVisitor.hpp  RenderIO.cpp  RenderIO.hpp  RenderImporter.cpp  RenderImporter.hpp  VulkanPBRT.cpp  config.json.template  gui.hpp  vsgList.txt
BFR/: CMakeLists.txt  bfr.hpp  bmfr.cpp  bmfr.h  comp.cpp  comp.h  exporter.cpp  exporter.h  gpu_images.cpp  gpu_images.h  main.cpp  matrix_parser.cpp  matrix_parser.h  shader_util.h  vk_utils.cpp  vk_utils.h
BFR/shader/: accumulate_data.comp  accumulate_noise.comp  bmfr.comp  qr.comp  taa.comp  weighted_sum.comp
Buffers/: AccumulationBuffer.cpp
Denoiser/: BFR.cpp  BFR.hpp  BFRBlender.cpp  BFRBlender.hpp  BMFR.cpp  BMFR.hpp  CMakeLists.txt
IO/: IO.hpp  RenderIO.cpp
RenderModules/: Accumulator.cpp  GBufferRasterizer.cpp  Taa.hpp
RenderModules/Denoisers/: BFRBlender.hpp  bfr.hpp
Scene/: RayTracingVisitor.hpp
Shaders/: brdf.glsl  camera.glsl  layoutPTGeometry.glsl  layoutPTImages.glsl  layoutPTUniform.glsl  lighting.glsl  ptClosesthit.rchit  ptRaygen.rgen  ptStructures.glsl  sampling.glsl
Source/: CMakeLists.txt  VulkanPBRT.cpp
Source/Buffers/: AccumulationBuffer.cpp  GBuffer.cpp  IlluminationBuffer.cpp
Source/IO/: RenderIO.cpp  RenderIO.hpp
Source/RenderModules/: Accumulator.cpp  Accumulator.hpp  FormatConverter.cpp  FormatConverter.hpp  GBufferRasterizer.cpp  GBufferRasterizer.hpp  PBRTPipeline.cpp  PBRTPipeline.hpp  Taa.cpp  Taa.hpp
Source/RenderModules/Denoisers/: BFR.cpp  BFR.hpp  BFRBlender.cpp  BMFR.cpp  BMFR.hpp
Source/Scene/: RayTracingVisitor.cpp  RayTracingVisitor.hpp
Source/Shaders/: geometry.glsl  taa.comp
Source/shaders/: ptMiss.rmiss
TAA/: CMakeLists.txt  Taa.cpp  taa.hpp
UtilityPipelines/: Accumulator.cpp  Accumulator.hpp  FormatConverter.cpp  FormatConverter.hpp
shaders/: accumulation.glsl  accumulator.comp  alpha_hit.rahit  bfr.comp  bfrBlender.comp  bmfrFit.comp  bmfrFitLegacy.comp  bmfrGeneral.comp  bmfrPost.comp  bmfrPre.comp  brdf.glsl  color.glsl  formatConverter.comp  general.glsl  geometry.glsl  layoutPTAccel.glsl  layoutPTGeometry.glsl  layoutPTGeometryImages.glsl  layoutPTImages.glsl  layoutPTLights.glsl  layoutPTPushConstants.glsl  layoutPTUniform.glsl  layoutRTGeometry.glsl  layoutRTGeometryImages.glsl  layoutRTImages.glsl  layoutRTPushConstants.glsl  layoutRTUniform.glsl  lighting.glsl  math.glsl  miss.rmiss  nextEvent.glsl  pbr_closesthit.rchit  ptAlphaHit.rahit  ptClosesthit.rchit  ptConstants.glsl  ptMiss.rmiss  ptRaygen.rgen  ptStructures.glsl  random.glsl  raygen.rgen  (+3 more)
source/: CMakeLists.txt  Gui.hpp  VulkanPBRT.cpp
source/buffers/: AccumulationBuffer.cpp  AccumulationBuffer.hpp  GBuffer.cpp  GBuffer.hpp  IlluminationBuffer.cpp  IlluminationBuffer.hpp
source/io/: RenderIO.cpp  RenderIO.hpp
source/renderModules/: Accumulator.cpp  Accumulator.hpp  FormatConverter.cpp  FormatConverter.hpp  GBufferRasterizer.cpp  GBufferRasterizer.hpp  PBRTPipeline.cpp  PBRTPipeline.hpp  PipelineStructs.hpp  Taa.cpp  Taa.hpp
source/renderModules/denoisers/: BFR.cpp  BFR.hpp  BFRBlender.cpp  BFRBlender.hpp  BMFR.cpp  BMFR.hpp
source/resources/: Mesh.cpp  Mesh.h  ResourceBase.cpp  ResourceBase.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
source/scene/: CountTrianglesVisitor.hpp  RayTracingVisitor.cpp  RayTracingVisitor.hpp  Scene.cpp  Scene.h
source/scene/entity/: Archetype.cpp  Archetype.h  Common.h  ComponentRegistry.h  Components.cpp  Components.h  ComponentsArray.cpp  ComponentsArray.h  Entity.h  EntityHandle.h  EntityManager.cpp  EntityManager.h  Example.h  SceneEntity.h
source/scene/entity/behaviors/: Animation.cpp  Animation.h  Base.h  CameraAnimation.cpp  CameraAnimation.h  LightBehaviors.cpp  LightBehaviors.h  MaterialBehaviors.cpp  MaterialBehaviors.h
source/util/: DenoiserUtils.cpp  DenoiserUtils.hpp  VsgUtils.cpp  VsgUtils.hpp
vsg/: CMakeLists.txt
vsg/include/SPIRV-Reflect/: spirv_reflect.h
vsg/include/SPIRV-Reflect/include/spirv/unified1/: spirv.h
vsg/include/vsg/: all.h
vsg/include/vsg/nodes/: Light.h
vsg/include/vsg/rtx/: AccelerationStructure.h  DescriptorAccelerationStructure.h  RayTracingPipeline.h  RayTracingShaderBindingTable.h  RayTracingShaderGroup.h  TopLevelAccelerationStructure.h
vsg/include/vsg/state/: ShaderModule.h  ShaderStage.h
vsg/include/vsg/viewer/: FlyNavigation.h  Trackball.h  WindowTraits.h
vsg/include/vsg/vk/: Context.h  Extensions.h  Instance.h
vsg/include/vsgXchange/: images.h  models.h
vsg/src/vsg/rtx/: AccelerationGeometry.cpp  AccelerationStructure.cpp  BottomLevelAccelerationStructure.cpp  RayTracingPipeline.cpp  TopLevelAccelerationStructure.cpp  TraceRays.cpp
vsg/src/vsg/state/: BufferInfo.cpp  DescriptorBuffer.cpp  ShaderModule.cpp  ShaderStage.cpp
vsg/src/vsg/text/shaders/: text_GpuLayout_vert.cpp  text_frag.cpp
vsg/src/vsg/viewer/: FlyNavigation.cpp  RenderGraph.cpp  Trackball.cpp
vsg/src/vsg/vk/: Context.cpp  Extensions.cpp  Instance.cpp  MemoryBufferPools.cpp  PipelineCache.cpp  ResourceLimits.cpp  ShaderCompiler.cpp
vsg/src/vsgImGui/: RenderImGui.cpp
vsg/src/vsgXchange/assimp/: 3DFrontImporter.cpp  3DFrontImporter.h  assimp.cpp
vsg/src/vsgXchange/models/: models.cpp
vsg/src/vsgXchange/openexr/: openexr.cpp
vsg_tmp/include/vsg/core/: Version.h
vsg_tmp/include/vsg/rtx/: RayTracingPipeline.h  RayTracingShaderGroup.h  TraceRays.h
vsg_tmp/include/vsg/state/: ShaderModule.h  ShaderStage.h
vsg_tmp/include/vsg/vk/: PipelineCache.h
vsg_tmp/include/vsgImGui/: RenderImGui.h
vsg_tmp/include/vsgXchange/: images.h
vsg_tmp/src/SPIRV-Reflect/: spirv_reflect.c
vsg_tmp/src/vsg/rtx/: RayTracingPipeline.cpp  (+3 more)
vsg_tmp/src/vsgImGui/: SendEventsToImGui.cpp
(+10 files in other folders)
